# OpenNovel

./: .gitignore  AGENTS.md  CHANGELOG.md  README.ko.md  README.md  package-lock.json  package.json
agent/: .env.example  README.md  pyproject.toml
agent/app/: config.py  main.py  runtime.py
agent/app/agents/: intender.py  narrator.py  state_manager.py  story.py  story_setup.py  world_builder.py
agent/app/api/: routes.py
agent/app/game/: __init__.py  engine.py  models.py  service.py
agent/app/graph/: state.py  workflow.py
agent/app/prompts/: intent_builder.py  narrative_builder.py  state_manager.py  story_builder.py  system_rules.py  world_builder.py
agent/app/retrieval/: indexer.py  query_builder.py  schemas.py  search.py  vector_store.py
agent/app/schemas/: common.py  intent.py  multi_agent.py  narrative.py  story.py  story_setup.py
agent/app/services/: fallback_renderer.py  file_logger.py  llm_client.py  validator.py
agent/content/intender_docs/: action-hints.json  location-aliases.json
agent/content/narrator_docs/: location-guides.json  npc-voices.json  quest-stages.json
agent/open_novel_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/tests/: conftest.py  test_diegetic_feedback.py  test_ending_fixes.py  test_game_api.py  test_llm_client.py  test_npc_autonomous.py  test_prompt_builders.py  test_qa_regressions.py  test_state_manager_improvements.py  test_workflows.py
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/content/: Cargo.toml
backend/crates/engine/: Cargo.toml
backend/crates/narrative/: Cargo.toml
(+38 files in other folders)
