[workspace]
members = [
  "crates/api",
  "crates/content",
  "crates/domain",
  "crates/engine",
  "crates/narrative",
  "crates/session",
  "crates/storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.6.20"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
